<resources>
    <string name="app_name">GigaQuiz</string>
    <string name="game_over">Game Over</string>
    <string name="try_again">Try Again?</string>
    <string name="position">Position</string>
    <string name="select_an_avatar">Select an Avatar</string>
    <string name="giga_quiz">GigaQuiz</string>
    <string name="about_text">С помощью GigaQuiz ты можешь проверить свой уровень знаний из различных свер. Надеюсь тебе понравиться данная викторина.</string>
    <string name="rules_text">\tВыбери ответ из предложенных вариантов.\n
        \n\tЕсли ты ответил неправильно, не расстраивайся! После завершения теста, ты всегда можешь вернуться к нему еще раз. В конце теста ты можешь увидеть свой результат.</string>
    <string name="rules">Правила</string>
    <string name="about">О приложении</string>
    <string name="trivia_hint">Trivia Hint</string>
    <string name="title_giga_quiz_question">GigaQuiz (%1$d/%2$d)</string>
    <string name="title_about_trivia">GigaQuiz</string>
    <string name="title_quiz_rules">GigaQuiz Rules</string>
    <string name="submit_button">Подтвердить</string>
    <string name="congratulations">Поздравляю!</string>
    <string name="description">description</string>
    <string name="play_quiz">Играть</string>
    <string name="your_result">Твой результат!</string>
    <string name="next_match">Выбрать тест</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="themes_ft">Темы</string>
    <string name="hint_name_til">Даниил</string>
    <string name="your_name">Ваше имя</string>
    <string name="country">Страна</string>
    <string name="hint_country_til">Россия</string>
    <string name="hint_age_tiet">54</string>
    <string name="age">Возраст</string>
    <string name="sex">Пол</string>
    <string name="categories_result">Результат по категориям</string>
    <string name="android_result">Андроид:</string>
    <string name="geographical_result">География:</string>
    <string name="registration_button_text">Регистрация</string>
    <string name="menu_navigation">Меню</string>
    <string name="profile_navigation">Профиль</string>
    <string name="home_page_navigation">На главную</string>
    <string name="rules_navigation">Правила</string>
    <string name="choose_theme_text">Темы</string>
    <string name="title_play_auto_brand_quiz">Марки авто</string>
    <string name="title_play_science_quiz">Наука</string>

    <string-array name="countriesNames">
        <item>Не выбрано</item>
        <item>Армения</item>
        <item>Азербайджан</item>
        <item>Беларусь</item>
        <item>Грузия</item>
        <item>Казахстан</item>
        <item>Кыргызстан</item>
        <item>Молдова</item>
        <item>Россия</item>
        <item>Таджикистан</item>
        <item>Туркменистан</item>
        <item>Узбекистан</item>
        <item>Украина</item>
    </string-array>

    <string-array name="age">
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
        <item>61</item>
        <item>62</item>
        <item>63</item>
        <item>64</item>
        <item>65</item>
        <item>66</item>
        <item>67</item>
        <item>68</item>
        <item>69</item>
        <item>70</item>
        <item>71</item>
        <item>72</item>
        <item>73</item>
        <item>74</item>
        <item>75</item>
        <item>76</item>
        <item>77</item>
        <item>78</item>
        <item>79</item>
        <item>80</item>
        <item>81</item>
        <item>82</item>
        <item>83</item>
        <item>84</item>
        <item>85</item>
        <item>86</item>
        <item>87</item>
        <item>88</item>
        <item>89</item>
        <item>90</item>
        <item>91</item>
        <item>92</item>
        <item>93</item>
        <item>94</item>
        <item>95</item>
        <item>96</item>
        <item>97</item>
        <item>98</item>
        <item>99</item>
        <item>100</item>
    </string-array>

    <string-array name="sex">
        <item>Мужской</item>
        <item>Женский</item>
    </string-array>

    <string-array name="topics">
        <item>Андроид</item>
        <item>Марки автомобилей</item>
        <item>География</item>
        <item>Наука</item>
    </string-array>

</resources>
