<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.navigation.TitleFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/titleConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDark">


        <ImageView
            android:id="@+id/titleImage"
            android:layout_width="393dp"
            android:layout_height="184dp"
            android:contentDescription="@string/description"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.171"
            app:srcCompat="@drawable/title_logo" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fredokaone"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="40sp"
            app:layout_constraintTop_toBottomOf="@+id/titleImage"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/themeTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/comfortaa"
            android:gravity="center"
            android:text="@string/choose_theme_text"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:layout_marginTop="50sp"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:layout_editor_absoluteX="-9dp" />

        <Spinner
            android:theme="@style/mySpinnerItemStyle"
            android:id="@+id/topicsSpinner"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:dropDownVerticalOffset="40dp"
            android:background="@drawable/bg_topic_spinner"
            android:entries="@array/topics"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toBottomOf="@+id/themeTextView"
            tools:layout_editor_absoluteX="3dp" />

        <Button
            android:id="@+id/playButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_quiz"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/topicsSpinner" />

        <Button
            android:id="@+id/registrationButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="@dimen/button_padding"
            android:paddingEnd="@dimen/button_padding"
            android:text="@string/registration_button_text"
            android:visibility="gone"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleImage"
            tools:ignore="MissingConstraints"
            tools:layout_editor_absoluteX="8dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>